removedo alguns warns

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.cache=trace
 logging.level.org.hazelcast=trace
 server.port=8082
+spring.jpa.open-in-view=false
+
