alguns testes com mongodb como suporte para fila

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ logging.level.org.springframework.cache=trace
 logging.level.org.hazelcast=trace
 server.port=8082
 spring.jpa.open-in-view=false
-
+spring.data.mongodb.database=demo
+spring.data.mongodb.grid-fs-database=demo
