--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 	implementation 'com.hazelcast:hazelcast'
 	implementation 'com.hazelcast:hazelcast-spring'
 	implementation 'com.hazelcast:hazelcast-client'
